--- a/index.html
+++ b/index.html
@@ -475,23 +475,12 @@
             </div>
             <div class="footer__option">
                 <div class="row">
+
                     <div class="col-lg-4 col-md-12">
                         <div class="footer__option__item">
 
                             <ul>
-                                <li><i class="fa fa-map-marker fa-icon" aria-hidden="true"></i><a href="#">HEAD OFFICE</a>
-                                    <p style="padding: 0 45px;">#123, PARAS KRISHNASHREE APARTMENT, R R Nagar, Bangalore <br> Phone:- +91 8590495374 <br>Mail:- info@dyneengineering.com</p>
-                                </li>
-
-
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-12">
-                        <div class="footer__option__item">
-
-                            <ul>
-                                <li><i class="fa fa-map-marker fa-icon" aria-hidden="true"></i><a href="#">WORKING OFFICE</a>
+                                <li><i class="fa fa-map-marker fa-icon" aria-hidden="true"></i><a href="#">INDIA OFFICE</a>
                                     <p style="padding: 0 45px;">Dyne Engineering, Squire nine building, Kasaragod, Kerala 671121 <br> Phone:- +91 9995757993 <br>Mail:- info@dyneengineering.com</p>
                                 </li>
                         </div>
@@ -504,8 +493,8 @@
                                     <p style="padding: 0 45px;"> Di GierEngineering, Santplaet 190, 3144DT Maassluis <br> Phone:- +31 614997624 <br>Mail:- info@degierengineering.nl</p>
                                 </li>
                         </div>
-
                     </div>
+
 
                 </div>
             </div>
@@ -513,7 +502,7 @@
                 <div class="row">
                     <div class="col-lg-12 text-center">
 
-                        <p class="footer__copyright__text">Copyright &copy; 2022, All Right Reserved Dyne Engineering <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://tequevia.com/" target="_blank">Tequevia Technologies</a>
+                        <p class="footer__copyright__text">Copyright &copy; 2022, All Right Reserved Degier Engineering <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://www.sanukyadav.com" target="_blank">skysoft</a>
                         </p>
 
                     </div>
