--- a/index.html
+++ b/index.html
@@ -390,30 +390,12 @@
                 </div>
                 <div class="col-lg-6 col-md-6 " style=" box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px">
                     <div class="contact__form mt-5">
-                        <form id="my-form" action="https://formspree.io/f/mqknbqjb" method="POST">
+                        <form id="my-form" action="https://formspree.io/f/myyqgldd" method="POST">
                             <input type="text" name="name" placeholder="Your Name">
                             <input type="email" name="email" placeholder="E-mail Address">
                             <textarea name="message" placeholder="Your Message" style="height:200px"></textarea>
                             <button type="submit" class="site-btn">Send Message <i class="fa fa-paper-plane" aria-hidden="true"></i></button>
-                            <!-- <label>Email:</label>
-                            <input type="email" name="email" />
-                            <label>Message:</label>
-                            <input type="text" name="message" />
-                            <button id="my-form-button">Submit</button>
-                            <p id="my-form-status"></p> -->
                         </form>
-                        <!-- <form action="mail.php" method="post">
-                            <input type="text" name="name" placeholder="Your Name">
-                            <input type="email" name="email" placeholder="E-mail Address">
-                            <textarea name="message" placeholder="Your Message" style="height:200px"></textarea>
-                            <button type="submit" class="site-btn">Send Message <i class="fa fa-paper-plane" aria-hidden="true"></i></button>
-                        </form> -->
-                        <!-- <form action="mail.php" method="POST">
-                            <input type="text" placeholder="Your Name" name="name">
-                            <input type="email" placeholder="E-mail Address" name="email">
-                            <textarea placeholder="Your Message" name="message"></textarea>
-                            <button type="submit" class="site-btn">Send Message</button>
-                        </form> -->
                     </div>
                 </div>
             </div>
