--- a/index.html
+++ b/index.html
@@ -563,5 +563,11 @@ AOS.init({
 duration: 1200,
 })
 </script>
+
+<!-- transalator -->
+<div class="gtranslate_wrapper"></div>
+<script>window.gtranslateSettings = {"default_language":"nl","wrapper_selector":".gtranslate_wrapper"}</script>
+<script src="https://cdn.gtranslate.net/widgets/latest/float.js" defer></script>
+
 </body>
 </html>
