--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                                         <img class="d-block w-100 lazy about-img" data-src="https://ik.imagekit.io/9z3vkcamtl/WEBSITE/HY50339_-_Hydrohammer_HoseWinch_-_01_CV3JxA3lA.jpg" alt="fifth slide">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block w-100 lazy about-img" data-src="hhttps://ik.imagekit.io/9z3vkcamtl/WEBSITE/HY50340_-_IHC_Hydrohammer_-_Cable_winch_GO2X9hE8D.jpg" alt="sixth slide">
+                                        <img class="d-block w-100 lazy about-img" data-src="https://ik.imagekit.io/9z3vkcamtl/WEBSITE/HY50340_-_IHC_Hydrohammer_-_Cable_winch_GO2X9hE8D.jpg" alt="sixth slide">
                                     </div>
                                     <div class="carousel-item">
                                         <img class="d-block w-100 lazy about-img" data-src="https://ik.imagekit.io/9z3vkcamtl/WEBSITE/RiserPullIn-HWT5400-7_yveSnU7jp.jpg" alt="seven slide">
@@ -177,7 +177,7 @@
                                         <img class="d-block w-100 lazy about-img" data-src="https://ik.imagekit.io/9z3vkcamtl/WEBSITE/Aux-HWT1470-1_4pyrXrGfUD.jpg" alt="nine slide">
                                     </div>
                                     <div class="carousel-item">
-                                        <img class="d-block w-100 lazy about-img" data-src="hhttps://ik.imagekit.io/9z3vkcamtl/WEBSITE/HY489620_Panama-Cutter_1_xAg2ajdxb.jpg" alt="ten slide">
+                                        <img class="d-block w-100 lazy about-img" data-src="https://ik.imagekit.io/9z3vkcamtl/WEBSITE/HY489620_Panama-Cutter_1_xAg2ajdxb.jpg" alt="ten slide">
                                     </div>
                                     <div class="carousel-item">
                                         <img class="d-block w-100 lazy about-img" data-src="https://ik.imagekit.io/9z3vkcamtl/WEBSITE/foto1_-fkla3dM5.jpg" alt="eleven slide">
@@ -449,7 +449,7 @@
 <div class="footer__copyright">
     <div class="row">
         <div class="col-lg-12 text-center">
-            <p class="footer__copyright__text">Copyright &copy; 2022, All Right Reserved Degier Engineering B.V.&nbsp;<i class="fa fa-heart-o" aria-hidden="true"></i>&nbsp;by <a href="https://www.sanukyadav.com" target="_blank">skysoft</a>
+            <p class="footer__copyright__text">Copyright &copy; 2023, All Right Reserved Degier Engineering B.V.&nbsp;<i class="fa fa-heart-o" aria-hidden="true"></i>&nbsp;by <a href="https://www.sanukyadav.com" target="_blank">skysoft</a>
         </p>
     </div>
 </div>
