updated about slides, transelator updated, css updated black about desc

--- a/index.html
+++ b/index.html
@@ -194,6 +194,20 @@
                                     <div class="carousel-item">
                                         <img class="d-block w-100 lazy about-img" data-src="https://ik.imagekit.io/9z3vkcamtl/WEBSITE/foto5_EdPE5zAGn.jpg" alt="fifteen slide">
                                     </div>
+
+
+                                    <div class="carousel-item">
+                                        <img class="d-block w-100 lazy about-img" data-src="https://ik.imagekit.io/9z3vkcamtl/WEBSITE/store3_zfFcwjvS4S.jpeg" alt="sixteen slide">
+                                    </div>
+
+                                    <div class="carousel-item">
+                                        <img class="d-block w-100 lazy about-img" data-src="https://ik.imagekit.io/9z3vkcamtl/WEBSITE/store2_d0KuR2iVC.jpeg" alt="seventeen slide">
+                                    </div>
+
+                                    <div class="carousel-item">
+                                        <img class="d-block w-100 lazy about-img" data-src="https://ik.imagekit.io/9z3vkcamtl/WEBSITE/store1_i7kQMMjGF.jpeg" alt="eighteen slide">
+                                    </div>
+
                                 </div>
                             </div>
                         </div>
@@ -207,7 +221,7 @@
                         <h2 class="sect-spn">Who we are?</h2>
                     </div>
                     <div class="about__text__desc">
-                        <p>De Gier Engineering is a specialist engineering services and solutions company servicing clients across a range of engineering segments helping improve their engineering efficiency, support their global footprint, and improve
+                        <p class="about__text__desc__p">De Gier Engineering is a specialist engineering services and solutions company servicing clients across a range of engineering segments helping improve their engineering efficiency, support their global footprint, and improve
                             their competitiveness. Leveraging technology, domain knowledge, and our robust work planning methodology to ensure an effective global delivery model for engineering services projects. Our engineering teams seamlessly integrate
                             into our client's in-house engineering/product development team and environment and act as a virtual extension of their engineering enterprise. The company is located in Bangalore (India), and services clients across Europe, the
                         Middle East, and Asia-Pacific.</p>
@@ -566,7 +580,7 @@ duration: 1200,
 
 <!-- transalator -->
 <div class="gtranslate_wrapper"></div>
-<script>window.gtranslateSettings = {"default_language":"nl","wrapper_selector":".gtranslate_wrapper"}</script>
+<script>window.gtranslateSettings = {"default_language":"en","native_language_names":true,"detect_browser_language":true,"languages":["en","nl"],"wrapper_selector":".gtranslate_wrapper","alt_flags":{"en":"usa"}}</script>
 <script src="https://cdn.gtranslate.net/widgets/latest/float.js" defer></script>
 
 </body>
