updated black colour font everywhwere

--- a/Storage-Tank.html
+++ b/Storage-Tank.html
@@ -108,7 +108,7 @@
                 <div class="col-lg-12 text-center">
                     <div class="breadcrumb__text">
                         <h2>Storage Tanks</h2>
-                        <p>De Gier Engineering Solutions Expertise in Design, Design Calculation, and Production Drawing of various types of Tanks and Silos have resulted in a notable record of successful projects and repeat clients. From Innovative new designs
+                        <p class="text__desc__p">De Gier Engineering Solutions Expertise in Design, Design Calculation, and Production Drawing of various types of Tanks and Silos have resulted in a notable record of successful projects and repeat clients. From Innovative new designs
                             to challenging renovations, we have mastered the subjects to build success in any critical task we undertake</p>
                     </div>
                 </div>
@@ -149,7 +149,7 @@
                         </div>
 
                         <div class="about__text__desc">
-                            <p>It refers to the storage tank for storing liquid with high flash points (eg. fuel oil, water, diesel, kerosene, bitumen, etc.) Fixed roof tank can also be divided into cone roof storage tank, dome roof storage tank and umbrella
+                            <p class="text__desc__p">It refers to the storage tank for storing liquid with high flash points (eg. fuel oil, water, diesel, kerosene, bitumen, etc.) Fixed roof tank can also be divided into cone roof storage tank, dome roof storage tank and umbrella
                                 roof storage tank. All of these roofs are insulated in order to prevent the clogging of some materials, wherein the heat is provided steam coils in within the storage tank.</p>
                         </div>
                     </div>
@@ -165,7 +165,7 @@
                         </div>
 
                         <div class="about__text__desc">
-                            <p>Dome roof tank is a kind of steel container with a spherical roof and a cylinder tank body. Dome roof storage tank has the advantages of simple manufacturing and low cost, thus it is widely used in various of fields. The common
+                            <p class="text__desc__p">Dome roof tank is a kind of steel container with a spherical roof and a cylinder tank body. Dome roof storage tank has the advantages of simple manufacturing and low cost, thus it is widely used in various of fields. The common
                                 capacity is 1,000-10,000m³, the maximum manufacture ability of TICO for dome roof storage tank can up to 30,000m³.</p>
                         </div>
                     </div>
@@ -221,7 +221,7 @@
                         </div>
 
                         <div class="about__text__desc">
-                            <p>The floating roof of floating roof storage tank is a floating cover on the surface of the stored liquid, floating up and down with the input and output of the liquid. There is an annular space between the floating roof and
+                            <p class="text__desc__p">The floating roof of floating roof storage tank is a floating cover on the surface of the stored liquid, floating up and down with the input and output of the liquid. There is an annular space between the floating roof and
                                 the tank wall, the annular space has a sealing device, so that the liquid in the storage tank can be isolated from the atmosphere when the top roof is floating up and down, thereby greatly reducing the evaporation loss
                                 of the stored liquid in the storage process. When the floating roof tank is used to store oil, it can reduce the loss of oil by about 80%, compared with the fixed roof tank.</p>
                         </div>
@@ -238,7 +238,7 @@
                         </div>
 
                         <div class="about__text__desc">
-                            <p>The internal floating roof tank is a floating roof tank with a fixed tank roof, is a new type of storage tank which is combined the dome storage tank with the floating roof storage tank. The top of internal floating roof tank
+                            <p class="text__desc__p">The internal floating roof tank is a floating roof tank with a fixed tank roof, is a new type of storage tank which is combined the dome storage tank with the floating roof storage tank. The top of internal floating roof tank
                                 is the combination of dome roof and floating roof, the exterior is floating roof, and the interior is fixed roof. Internal floating roof tank has the unique advantages, on the one hand, compared with external floating roof
                                 tank, internal floating roof tank can prevent the wind, sand, rain, snow and dust from invading, guarantee the quality of stored liquid absolutely.</p>
                         </div>
@@ -294,7 +294,7 @@
                         </div>
 
                         <div class="about__text__desc">
-                            <p>Silo storage tanks are used around the world to keep bulk products safe. Many companies, from the oil companies to local food producers, utilize silos as a simple way to store huge amounts of any substance without putting it
+                            <p class="text__desc__p">Silo storage tanks are used around the world to keep bulk products safe. Many companies, from the oil companies to local food producers, utilize silos as a simple way to store huge amounts of any substance without putting it
                                 at risk. Silos can be built using a wide range of materials to meet the needs of the product that will be stored in them, and can also be refrigerated or coated for extra protection. Silos also come in horizontal and vertical
                                 orientations, but vertical silos are most popular for a number of reasons.</p>
                         </div>
@@ -336,7 +336,7 @@
                         </div>
 
                         <div class="about__text__desc">
-                            <p>It refers to the storage tank for storing liquid with high flash points (eg. fuel oil, water, diesel, kerosene, bitumen, etc.) Fixed roof tank can also be divided into cone roof storage tank, dome roof storage tank and umbrella
+                            <p class="text__desc__p">It refers to the storage tank for storing liquid with high flash points (eg. fuel oil, water, diesel, kerosene, bitumen, etc.) Fixed roof tank can also be divided into cone roof storage tank, dome roof storage tank and umbrella
                                 roof storage tank. All of these roofs are insulated in order to prevent the clogging of some materials, wherein the heat is provided steam coils in within the storage tank.</p>
                         </div>
                     </div>
@@ -371,7 +371,7 @@
                         </div>
 
                         <div class="about__text__desc">
-                            <p>Dome roof tank is a kind of steel container with a spherical roof and a cylinder tank body. Dome roof storage tank has the advantages of simple manufacturing and low cost, thus it is widely used in various of fields. The common
+                            <p class="text__desc__p">Dome roof tank is a kind of steel container with a spherical roof and a cylinder tank body. Dome roof storage tank has the advantages of simple manufacturing and low cost, thus it is widely used in various of fields. The common
                                 capacity is 1,000-10,000m³, the maximum manufacture ability of TICO for dome roof storage tank can up to 30,000m³.</p>
                         </div>
                     </div>
@@ -410,7 +410,7 @@
                         </div>
 
                         <div class="about__text__desc">
-                            <p>The floating roof of floating roof storage tank is a floating cover on the surface of the stored liquid, floating up and down with the input and output of the liquid. There is an annular space between the floating roof and
+                            <p class="text__desc__p">The floating roof of floating roof storage tank is a floating cover on the surface of the stored liquid, floating up and down with the input and output of the liquid. There is an annular space between the floating roof and
                                 the tank wall, the annular space has a sealing device, so that the liquid in the storage tank can be isolated from the atmosphere when the top roof is floating up and down, thereby greatly reducing the evaporation loss
                                 of the stored liquid in the storage process. When the floating roof tank is used to store oil, it can reduce the loss of oil by about 80%, compared with the fixed roof tank.</p>
                         </div>
@@ -447,7 +447,7 @@
                             </div>
 
                             <div class="about__text__desc">
-                                <p>The internal floating roof tank is a floating roof tank with a fixed tank roof, is a new type of storage tank which is combined the dome storage tank with the floating roof storage tank. The top of internal floating roof
+                                <p class="text__desc__p">The internal floating roof tank is a floating roof tank with a fixed tank roof, is a new type of storage tank which is combined the dome storage tank with the floating roof storage tank. The top of internal floating roof
                                     tank is the combination of dome roof and floating roof, the exterior is floating roof, and the interior is fixed roof. Internal floating roof tank has the unique advantages, on the one hand, compared with external floating
                                     roof tank, internal floating roof tank can prevent the wind, sand, rain, snow and dust from invading, guarantee the quality of stored liquid absolutely.</p>
                             </div>
@@ -485,7 +485,7 @@
                         </div>
 
                         <div class="about__text__desc">
-                            <p>Silo storage tanks are used around the world to keep bulk products safe. Many companies, from the oil companies to local food producers, utilize silos as a simple way to store huge amounts of any substance without putting it
+                            <p class="text__desc__p">Silo storage tanks are used around the world to keep bulk products safe. Many companies, from the oil companies to local food producers, utilize silos as a simple way to store huge amounts of any substance without putting it
                                 at risk. Silos can be built using a wide range of materials to meet the needs of the product that will be stored in them, and can also be refrigerated or coated for extra protection. Silos also come in horizontal and vertical
                                 orientations, but vertical silos are most popular for a number of reasons.</p>
                         </div>
