--- a/computer-aided.html
+++ b/computer-aided.html
@@ -128,7 +128,7 @@
                         </div>
 
                         <div class="about__text__desc">
-                            <p>COMPUTER-AIDED ENGINEERING The engineering industry always uses prediction models to predict the possibilities of failure of a working component. De Gier Engineering specializes in the Fatigue Analysis, Finite Element Analysis
+                            <p class="text__desc__p">COMPUTER-AIDED ENGINEERING The engineering industry always uses prediction models to predict the possibilities of failure of a working component. De Gier Engineering specializes in the Fatigue Analysis, Finite Element Analysis
                                 (FEA), and Finite Element Modeling (FEM) approach to perform stress and fatigue analysis of a variety of equipment under the loads to assess the expected useful life of different components or assemblies. We have a team
                                 of professional staff that can help you in any type of engineering analysis that you may require for your business.
                             </p>
