--- a/engineering-design.html
+++ b/engineering-design.html
@@ -132,7 +132,7 @@
                         </div>
 
                         <div class="about__text__desc">
-                            <p>ENGINEERING DESIGN & DETAILING With the product development lifecycles shrinking these days, it’s critical than ever before to get the detailed design right. We understand that engineering detailing is the keystone of high
+                            <p class="text__desc__p">ENGINEERING DESIGN & DETAILING With the product development lifecycles shrinking these days, it’s critical than ever before to get the detailed design right. We understand that engineering detailing is the keystone of high
                                 quality, cost, and time-effective manufacturing. De Gier Engineering offers multi-disciplinary Engineering Design and Detailing Services using intelligent and state of art technology applications. Our team includes expert
                                 engineers with rich experience in automotive, Heavy Engineering, Industrial equipment & products, Industrial storage Tanks, and Silos. We also provide best-in-class detailed engineering services through integrated engineering
                                 workflows and applications for mechanical, piping, and instrumentation projects. We work in close collaboration to deliver your project cost-effectively and quickly than you could typically achieve by hiring additional
