--- a/engineering-document.html
+++ b/engineering-document.html
@@ -131,7 +131,7 @@
                         </div>
 
                         <div class="about__text__desc">
-                            <p>ENGINEERING DOCUMENTATION / STANDARDIZATION & LARGE DATA MIGRATION It is important to look at a bigger picture while converting existing data into another format in the context of larger engineering goals. The goals for large
+                            <p class="text__desc__p">ENGINEERING DOCUMENTATION / STANDARDIZATION & LARGE DATA MIGRATION It is important to look at a bigger picture while converting existing data into another format in the context of larger engineering goals. The goals for large
                                 data migration and standardization should not only be in-line with the proposed new software initiative, but also a formal component of your engineering strategy. De Gier Engineering experts enable you to visualize future
                                 demands and assist you in rigorous planning and detailed analysis required in CAD migration. We help you in standardizing the existing records before migrating to a new platform. This helps in redefining engineering standards
                                 and processes to gain higher benefits. With our experience in data migration, we assure you the best results in a quick turnaround time. Our team of highly experienced engineers follows a structured process to understand
