--- a/product-design.html
+++ b/product-design.html
@@ -136,7 +136,7 @@
                         </div>
 
                         <div class="about__text__desc">
-                            <p>PRODUCT DESIGN & DEVELOPMENT DESIGN for the future Product development starts at the idea generation stage. But every idea doesn’t get transformed into a successful product. Product designing and development not only requires
+                            <p class="text__desc__p">PRODUCT DESIGN & DEVELOPMENT DESIGN for the future Product development starts at the idea generation stage. But every idea doesn’t get transformed into a successful product. Product designing and development not only requires
                                 specialized skills but also an investment of time and money. Efforts taken in product development cannot be measured only in monetary terms. A product gets its value only when the customer understands the criticality of
                                 its design and functionality. De Gier Engineering helps you validate your concept and convert it into real products. Our core focus on designing includes aesthetics as well as the functionality of the product. We make sure
                                 that your product looks great and is functionally superior to other competitors in the market. Our expertise in product designing and development enables us to provide rich and delightful experience in your product development
