fix en to dutch about

--- a/index.html
+++ b/index.html
@@ -150,7 +150,6 @@
                                     <div class="carousel-item active">
                                         <img class="d-block w-100 lazy about-img" data-src="https://ik.imagekit.io/9z3vkcamtl/WEBSITE/HY47657-4_-xxM8mAuN.jpg" alt="First slide">
                                     </div>
-
                                     <div class="carousel-item">
                                         <img class="d-block w-100 lazy about-img" data-src="https://ik.imagekit.io/9z3vkcamtl/WEBSITE/HY50339_-_Hydrohammer_HoseWinch_-_02_IeY_bdAPT.jpg" alt="Second slide">
                                     </div>
@@ -194,20 +193,15 @@
                                     <div class="carousel-item">
                                         <img class="d-block w-100 lazy about-img" data-src="https://ik.imagekit.io/9z3vkcamtl/WEBSITE/foto5_EdPE5zAGn.jpg" alt="fifteen slide">
                                     </div>
-
-
                                     <div class="carousel-item">
                                         <img class="d-block w-100 lazy about-img" data-src="https://ik.imagekit.io/9z3vkcamtl/WEBSITE/store3_zfFcwjvS4S.jpeg" alt="sixteen slide">
                                     </div>
-
                                     <div class="carousel-item">
                                         <img class="d-block w-100 lazy about-img" data-src="https://ik.imagekit.io/9z3vkcamtl/WEBSITE/store2_d0KuR2iVC.jpeg" alt="seventeen slide">
                                     </div>
-
                                     <div class="carousel-item">
                                         <img class="d-block w-100 lazy about-img" data-src="https://ik.imagekit.io/9z3vkcamtl/WEBSITE/store1_i7kQMMjGF.jpeg" alt="eighteen slide">
                                     </div>
-
                                 </div>
                             </div>
                         </div>
@@ -221,10 +215,14 @@
                         <h2 class="sect-spn">Who we are?</h2>
                     </div>
                     <div class="about__text__desc">
-                        <p class="about__text__desc__p">De Gier Engineering is a specialist engineering services and solutions company servicing clients across a range of engineering segments helping improve their engineering efficiency, support their global footprint, and improve
-                            their competitiveness. Leveraging technology, domain knowledge, and our robust work planning methodology to ensure an effective global delivery model for engineering services projects. Our engineering teams seamlessly integrate
-                            into our client's in-house engineering/product development team and environment and act as a virtual extension of their engineering enterprise. The company is located in Bangalore (India), and services clients across Europe, the
-                        Middle East, and Asia-Pacific.</p>
+                        <p class="about__text__desc__p">De Gier Engineering B.V. is een toonaangevend werktuigbouwkundig ingenieursbureau dat actief is in diverse technische branches, variërend van apparatenbouw tot aan de olie- en gasindustrie. Ons ervaren team van ingenieurs beschikt over diepgaande kennis en expertise om hoogwaardige technische oplossingen te bieden die voldoen aan de specifieke behoeften van onze klanten.</br>
+                            Onze diensten omvatten technisch advies, projectmanagement, ontwerp en modellering en constructiebegeleiding. We streven naar innovatie en efficiëntie in al onze projecten.</br>
+                            Wat ons onderscheidt, is onze toewijding aan kwaliteit en klanttevredenheid. Met een flexibele aanpak streven we ernaar om de verwachtingen van onze klanten waar te maken. Ons ervaren team staat klaar om met klanten van elk formaat samen te werken en succesvolle projecten te realiseren.</br>
+                            Heeft u grotere projecten of wilt u structureel werk uitbesteden? Bij De Gier Engineering B.V. bieden we de mogelijkheid om omvangrijke projecten aan ons toe te vertrouwen. Onze vestiging in India beschikt over hoogopgeleide engineers die complexe technische projecten succesvol kunnen afronden. We garanderen een naadloze samenwerking tussen ons Nederlandse en Indiase team voor efficiëntie en kosteneffectiviteit.</br>
+                            Met gebruikmaking van onze Indiase vestiging profiteert u van lagere kosten en snellere doorlooptijden zonder concessies te doen aan de kwaliteit. We handhaven de hoogste normen en zorgen ervoor dat elk project aan uw specifieke eisen voldoet.</br>
+                            Bij De Gier Engineering B.V. streven we naar langdurige samenwerkingsverbanden met onze klanten. Als u structureel werk bij ons uitbesteedt, zorgen we voor een soepele overgang en continu hoogwaardige technische oplossingen. Ons team beheert uw projecten en ontlast u, zodat u zich kunt richten op uw kernactiviteiten.
+                            Kortom, bij De Gier Engineering B.V. kunt u rekenen op deskundig advies, innovatieve oplossingen en een betrouwbare partner voor al uw engineeringbehoeften.
+                        Neem vandaag nog contact met ons op en ontdek hoe wij u kunnen helpen uw project tot een succes te maken.</p>
                     </div>
                 </div>
             </div>
