updated content about

--- a/index.html
+++ b/index.html
@@ -215,14 +215,13 @@
                         <h2 class="sect-spn">Who we are?</h2>
                     </div>
                     <div class="about__text__desc">
-                        <p class="about__text__desc__p">De Gier Engineering B.V. is een toonaangevend werktuigbouwkundig ingenieursbureau dat actief is in diverse technische branches, variërend van apparatenbouw tot aan de olie- en gasindustrie. Ons ervaren team van ingenieurs beschikt over diepgaande kennis en expertise om hoogwaardige technische oplossingen te bieden die voldoen aan de specifieke behoeften van onze klanten.</br>
-                            Onze diensten omvatten technisch advies, projectmanagement, ontwerp en modellering en constructiebegeleiding. We streven naar innovatie en efficiëntie in al onze projecten.</br>
-                            Wat ons onderscheidt, is onze toewijding aan kwaliteit en klanttevredenheid. Met een flexibele aanpak streven we ernaar om de verwachtingen van onze klanten waar te maken. Ons ervaren team staat klaar om met klanten van elk formaat samen te werken en succesvolle projecten te realiseren.</br>
-                            Heeft u grotere projecten of wilt u structureel werk uitbesteden? Bij De Gier Engineering B.V. bieden we de mogelijkheid om omvangrijke projecten aan ons toe te vertrouwen. Onze vestiging in India beschikt over hoogopgeleide engineers die complexe technische projecten succesvol kunnen afronden. We garanderen een naadloze samenwerking tussen ons Nederlandse en Indiase team voor efficiëntie en kosteneffectiviteit.</br>
-                            Met gebruikmaking van onze Indiase vestiging profiteert u van lagere kosten en snellere doorlooptijden zonder concessies te doen aan de kwaliteit. We handhaven de hoogste normen en zorgen ervoor dat elk project aan uw specifieke eisen voldoet.</br>
-                            Bij De Gier Engineering B.V. streven we naar langdurige samenwerkingsverbanden met onze klanten. Als u structureel werk bij ons uitbesteedt, zorgen we voor een soepele overgang en continu hoogwaardige technische oplossingen. Ons team beheert uw projecten en ontlast u, zodat u zich kunt richten op uw kernactiviteiten.
-                            Kortom, bij De Gier Engineering B.V. kunt u rekenen op deskundig advies, innovatieve oplossingen en een betrouwbare partner voor al uw engineeringbehoeften.
-                        Neem vandaag nog contact met ons op en ontdek hoe wij u kunnen helpen uw project tot een succes te maken.</p>
+                        <p class="about__text__desc__p">De Gier Engineering BV is a leading mechanical engineering firm that is active in various technical sectors, ranging from equipment construction to the oil and gas industry. Our experienced team of engineers has in-depth knowledge and expertise to provide high-quality technical solutions that meet the specific needs of our customers.</br>
+                            Our services include technical consultancy, project management, design and modeling and construction supervision. We strive for innovation and efficiency in all our projects.</br>
+                            What sets us apart is our commitment to quality and customer satisfaction. With a flexible approach, we strive to meet the expectations of our customers. Our experienced team is ready to work with clients of all sizes and deliver successful projects.</br>
+                            Do you have larger projects or do you want to outsource structural work? At De Gier Engineering BV we offer the possibility to entrust extensive projects to us. Our branch in India has highly trained engineers who can successfully complete complex technical projects. We guarantee seamless cooperation between our Dutch and Indian team for efficiency and cost-effectiveness.</br>
+                            Using our Indian facility, you benefit from lower costs and faster turnaround times without compromising on quality. We maintain the highest standards and ensure that each project meets your specific requirements.</br>
+                            At De Gier Engineering BV we strive for long-term partnerships with our customers. If you outsource structural work to us, we ensure a smooth transition and continuous high-quality technical solutions. Our team manages your projects and relieves you, so you can focus on your core business.</br>
+                        In short, at De Gier Engineering BV you can count on expert advice, innovative solutions and a reliable partner for all your engineering needs. Contact us today and find out how we can help make your project a success.</p>
                     </div>
                 </div>
             </div>
@@ -578,8 +577,7 @@ duration: 1200,
 
 <!-- transalator -->
 <div class="gtranslate_wrapper"></div>
-<script>window.gtranslateSettings = {"default_language":"en","native_language_names":true,"detect_browser_language":true,"languages":["en","nl"],"wrapper_selector":".gtranslate_wrapper","alt_flags":{"en":"usa"}}</script>
+<script>window.gtranslateSettings = {"default_language":"en","native_language_names":true,"detect_browser_language":true,"languages":["en","nl"],"wrapper_selector":".gtranslate_wrapper","flag_style":"3d","alt_flags":{"en":"usa"}}</script>
 <script src="https://cdn.gtranslate.net/widgets/latest/float.js" defer></script>
-
 </body>
 </html>
