--- a/index.html
+++ b/index.html
@@ -143,6 +143,10 @@
                 <div class="about__pic">
                     <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12 first-img">
+                        </br>
+                        </br>
+                        </br>
+
                             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
@@ -191,7 +195,7 @@
                                     <div class="carousel-item">
                                         <img class="d-block w-100 lazy about-img" data-src="https://ik.imagekit.io/9z3vkcamtl/WEBSITE/foto5_EdPE5zAGn.jpg" alt="fifteen slide">
                                     </div>
-                                    <div class="carousel-item">
+<!--                                     <div class="carousel-item">
                                         <img class="d-block w-100 lazy about-img" data-src="https://ik.imagekit.io/9z3vkcamtl/WEBSITE/store3_zfFcwjvS4S.jpeg" alt="sixteen slide">
                                     </div>
                                     <div class="carousel-item">
@@ -199,7 +203,7 @@
                                     </div>
                                     <div class="carousel-item">
                                         <img class="d-block w-100 lazy about-img" data-src="https://ik.imagekit.io/9z3vkcamtl/WEBSITE/store1_i7kQMMjGF.jpeg" alt="eighteen slide">
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
