--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="hero__text">
-                            <h2>De Gier Engineering Solutions</h2>
+                            <h2 class="notranslate">De Gier Engineering B.V.</h2>
                             <span>Are you looking for a Mechanical Design Engineering firm with lot of experience</span>
                             <a href="#about" class="primary-btn">Get Started</a>
                         </div>
@@ -105,7 +105,7 @@
                 </div>
             </div>
         </div>
-        <div class="hero__item set-bg lazy" data-setbg="img/images/slider1.jpg">
+<!--         <div class="hero__item set-bg lazy" data-setbg="img/images/slider1.jpg">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
@@ -118,13 +118,13 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="hero__item set-bg lazy" data-setbg="img/images/slider3.jpg">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="hero__text">
-                            <h2>Degier Engineering Solutions</h2>
+                            <h2 class="notranslate">De Gier Engineering B.V</h2>
                             <span>Are you looking for a Mechanical Design Engineering firm with lot of experience</span>
                             <a href="#about" class="primary-btn">Get Started</a>
                         </div>
