--- a/Reverse-Engineering.html
+++ b/Reverse-Engineering.html
@@ -75,7 +75,7 @@
 
                                 </li>
 
-                                <li><a href="#contact">Contact</a></li>
+                                <li><a href="/#contact">Contact</a></li>
                             </ul>
                         </nav>
                         
