--- a/engineering-design.html
+++ b/engineering-design.html
@@ -76,7 +76,7 @@
 
                                 </li>
 
-                                <li><a href="#contact">Contact</a></li>
+                                <li><a href="/#contact">Contact</a></li>
                             </ul>
                         </nav>
                         
